# Chocosploit

./: .gitmodules  ApplicationContext.cpp  ApplicationContext.hpp  CMakeLists.txt  CMakePresets.json  Communication.cpp  Communication.hpp  Entry.cpp  Logger.cpp  Logger.hpp  OffsetsAndFunctions.hpp  README.md  ShufflesAndVmValues.hpp  vcpkg.json
Dependencies/: oxorany.h  oxorany_include.h
Dependencies/IXWebsocket/: CMakeLists.txt
Dependencies/Luau/VM/include/: lua.h
Dependencies/Luau/VM/src/: lapi.cpp  lfunc.cpp  lgc.cpp  lobject.h  lstate.h  ltable.cpp  ltm.cpp  ltm.h  lvmexecute.cpp
Dependencies/stb/: stb_image.cpp  stb_image_resize2.cpp  stb_image_resize2.hpp
Environment/: EnvironmentManager.cpp  EnvironmentManager.hpp  ExploitObject.cpp  ExploitObject.hpp
Environment/ExploitObjects/: Connection.cpp  Connection.hpp  Drawing.cpp  Drawing.hpp  Websocket.cpp  Websocket.hpp
Environment/Libraries/: Cache.cpp  Cache.hpp  Closures.cpp  Closures.hpp  Crypt.cpp  Crypt.hpp  Debug.cpp  Debug.hpp  Drawing.cpp  Drawing.hpp  Filesystem.cpp  Filesystem.hpp  Globals.cpp  Globals.hpp  Instances.cpp  Instances.hpp  Metatable.cpp  Metatable.hpp  Misc.cpp  Misc.hpp  Script.cpp  Script.hpp  Websockets.cpp  Websockets.hpp
Execution/: BytecodeCompiler.cpp  BytecodeCompiler.hpp  InternalTaskScheduler.cpp  InternalTaskScheduler.hpp  LuauSecurity.cpp  LuauSecurity.hpp
Managers/: CClosureManager.cpp  CClosureManager.hpp  FileSystemManager.cpp  FileSystemManager.hpp
Managers/Render/: RenderManager.cpp  RenderManager.hpp
Roblox/: Instance.cpp  Instance.hpp  TaskScheduler.cpp  TaskScheduler.hpp
scripts/: generate_definitions.py
